# BIOF3001-Project

./: .gitignore  README.md  Snakefile  install_packages.R  library.R  pyproject.toml  requirements.R
.dvc/: config
Raw Data/: CPTAC-3.clinical.tsv
data/: .gitignore  GDCrnaseq.dvc  README.md  raw.dvc  rna.dvc
data/geo/: .gitignore  GSE213478_betas_only.tsv.gz.dvc  GSE213478_series_matrix.txt  GSE213478_series_matrix.txt.dvc  gse213478_metadata_parsed.csv  gse213478_metadata_parsed_enriched.csv  summary_GSE213478_report.txt
data/processed/: .gitignore  gdc_pancan.dvc  gdc_pancan_normal_pheno.tsv.dvc
data/raw/: .gitignore  GDCdata.dvc  GDCrnaseq.dvc
docs/: analysis_guidelines.md  analysis_report.Rmd  getting_started.md
figures/: README.md
results/: .gitignore  README.md  clinical.dvc  differential_analysis.dvc  pathway_analysis.dvc  tissue_analysis.dvc
scripts/: 01_preprocess_data.R  02_exploratory_analysis.R  03_statistical_analysis.R  DE.R  analysis_GEO.ipynb  analysis_GEO.py  classify_BRCA_KIRCsamples.R  classify_extreme_samples.R  clinical_correlation.R  combine_pancan.R  downlaod_gse.py  download_extreme_rnaseq.R  download_gdc_pancan.R  download_gse_brain.py  epigenetic_clock.R  epigenetic_clocks.R  extract_betas.py  extract_meta_GEO.py  generate_pdf.R  get_brca_rnaseq_by_barcode.R  helper_functions.R  main_analysis.R  plot_clinical_data_availability.R  plot_normal_tissue_distribution.R  process_project.R  run_accel_de_analysis.R  run_multi_project_accel_de_analysis.R  run_pathway_analysis.R  script.ipynb  tissue_distribution.R
workflow/: Snakefile
(+43 files in other folders)
